Edited tests for Django 3; expecting failures

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-    django{21, _stable}
+    django{21, _stable, 3}
 
 [testenv]
 basepython =
@@ -45,6 +45,13 @@ commands =
     python tests/django_tests/manage_tests/runtests.py --discover-passing --django-version=21 --failfast
 deps =
     Django==2.1
+
+[testenv:django3]
+commands = 
+    python test/django_tests/manage_tests/runtests.py --discover-passing --django-version=3 --failfast
+
+deps = 
+    Django==3.0.4
 
 [testenv:docs]
 deps =
