Modified travis.yml to incorporat multiple python versions

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ basepython =
     python3.6
 
 commands_pre =
+    pip install -U pip setuptools wheel -I
     pip install tblib
     python tests/precheckin.py
 
