--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,15 @@ language: python
 
 python:
   - "3.6"
+  - "3.7"
+  - "3.8"
 
 install:
   - wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
   - echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list
   - sudo apt-get update
   - sudo apt-get install -y mongodb-org
+  - pip install -U pip setuptools wheel -I
   - pip install tox
 
 services: mongodb
