Removed basepython from setup.py for testing across 3.7 and 3.8

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@
 envlist =
     django{21, _stable, 3}
 
-[testenv]
-basepython =
-    python3.6
+; [testenv]
+; basepython =
+;     python3.6
 
 commands_pre =
     pip install -U pip setuptools wheel -I
