--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - sudo apt-get update
   - sudo apt-get install -y mongodb-org
   - pip install -U pip setuptools wheel -I
+  - pip install tblib
   - pip install tox
 
 services: mongodb
