--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,6 @@ envlist =
     py36-django{21, _stable, _discover, 3}
     py37-django{21, _stable, _discover, 3}
     py38-django{21, _stable, _discover, 3}
-
 [pytest]
 python_files = test/django_tests/manage_test/runtests.py
 
@@ -25,7 +24,7 @@ commands_pre =
     pip install tblib
     python tests/precheckin.py
 commands = 
-    python -v
+    python -V
     django21: python tests/django_tests/manage_tests/runtests.py --run-currently-passing --django-version=21
     django_stable: python tests/django_tests/manage_tests/runtests.py --run-currently-passing --django-version=22 -v 2
     django3: python tests/django_tests/manage_tests/runtests.py --run-currently-passing --django-version=3
